--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node": "6"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "postinstall": "bower install"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +18,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "pug": "^2.0.0-beta6"
+  },
+  "devDependencies": {
+    "bower": "^1.7.9"
   }
 }
