--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mongodb": "^2.2.9",
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
     "bower": "^1.7.9"
   }
-  
 }
