--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "6"
   },
   "scripts": {
+    "db:seed": "node db/dbseed.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "postinstall": "bower install"
