--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^0.8.7",
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "connect-redis": "^3.1.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "mongoose": "^4.6.0",
     "pug": "^2.0.0-beta6"
   },
